Color style changes. Fixed white space on right

--- a/css/pdnpi.css
+++ b/css/pdnpi.css
@@ -2,7 +2,11 @@
 	font-family: 'Open Sans', sans-serif;
 }
 body, html {
-	height: 100%;
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 footer {
 	background-color: rgb(230,230,230);
@@ -10,7 +14,7 @@ footer {
 	padding-bottom: 15px;
 }
 nav {
-	border-bottom: 1px solid #a3a7a9;
+	border-top: 1px solid #a3a7a9;
 }
 #listing {
 	padding-top: 15px;
@@ -82,6 +86,10 @@ nav {
 }
 .plugin .author {
 	margin-right: 10px;
+}
+.row {
+  padding-right: 0px;
+  margin-right: 0px;
 }
 
 /* Scroll to top */
